--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
-version: '2.4'
+version: '3.6'
 services:
   iris:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     restart: always
-    ports:
-      - 52773:52773
+    ports: 
+      - 41773:1972
+      - 42773:52773
+      - 53773
+    volumes:
+      - ./:/irisrun/repo
